--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+::-webkit-scrollbar {
+    display: none;
+  }
+
 .cart-quantity {
     position: relative;
     bottom: 30px;
